tests/aster/x/mochi/rosetta/copy-stdin-to-stdout-2.error
error[A024]: unknown function input
  --> /workspace/mochi/tests/rosetta/x/Mochi/copy-stdin-to-stdout-2.mochi:6:16

  6 |     let line = input()
    |                ^

help:
  Declare input before use
